tests/fail/nightly/raw_string.stderr
error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:2:33
  |
2 |     sscanf::sscanf!("hi", r"asdf{}asdf");
  |                                 ^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:3:35
  |
3 |     sscanf::sscanf!("hi", r"asdf{:bob}asdf", usize);
  |                                   ^^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:4:40
  |
4 |     sscanf::sscanf!("hi", r"asdf{usize:bob}asdf");
  |                                        ^^^

error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:5:35
  |
5 |     sscanf::sscanf!("hi", r##"asdf{}asdf"##);
  |                                   ^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:6:37
  |
6 |     sscanf::sscanf!("hi", r##"asdf{:bob}asdf"##, usize);
  |                                     ^^^

error: unrecognized format option.
       Hint: Regex format options must start and end with '/'
 --> tests/fail/nightly/raw_string.rs:7:42
  |
7 |     sscanf::sscanf!("hi", r##"asdf{usize:bob}asdf"##);
  |                                          ^^^
